--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all cats order by age here"
+    "# select all cats order by age here\n",
+    "cur.execute('''SELECT column_name FROM table_name ORDER BY column_name ASC|DESC;''').fetchall()"
    ]
   },
   {
