Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select the two oldest cats here"
+    "# select the two oldest cats here\n",
+    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()"
    ]
   },
   {
