Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,10 +352,21 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'Moe', 10, 'Tabby', None)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# select the two oldest cats here\n",
-    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()"
+    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 2;''').fetchone()"
    ]
   },
   {
