Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,7 @@
    ],
    "source": [
     "# select the two oldest cats here\n",
-    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 2;''').fetchone()"
+    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 2;''').fetchtwo()"
    ]
   },
   {
