--- a/index.ipynb
+++ b/index.ipynb
@@ -401,21 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-d0bb9c05ab59>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-12-586cbd848f10>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-d0bb9c05ab59>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    SELECT name FROM cats WHERE age BETWEEN 1 AND 3;\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-586cbd848f10>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    (SELECT name FROM cats WHERE age BETWEEN 1 AND 3;)\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "SELECT name FROM cats WHERE age BETWEEN 1 AND 3;"
+    "(SELECT name FROM cats WHERE age BETWEEN 1 AND 3;)"
    ]
   },
   {
