Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,21 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-ef4e18ac8910>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-ef4e18ac8910>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cur.execute(SELECT * FROM cats WHERE age BETWEEN 1 AND 3;).fetchall()\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# find all records between ages 1 and three here\n",
-    "cur.execute(SELECT * FROM cats WHERE age BETWEEN 1 AND 3;).fetchall()"
+    "# find all records between ages 1 and three here"
    ]
   },
   {
