--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find all records between ages 1 and three here"
+    "# find all records between ages 1 and three here\n",
+    "cur.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 2;''').fetchall()"
    ]
   },
   {
