--- a/index.ipynb
+++ b/index.ipynb
@@ -401,24 +401,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "near \"BETWEEN\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-e5811a0d2196>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# find all records between ages 1 and three here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT * FROM cats ORDER BY BETWEEN 1 AND 3;'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: near \"BETWEEN\": syntax error"
-     ]
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cur.execute('''SELECT * FROM cats ORDER BY BETWEEN 1 AND 3;''').fetchall()"
+    "cur.execute('''SELECT * FROM cats WHERE age BETWEEN 1 AND 3;''').fe"
    ]
   },
   {
