Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -412,14 +412,14 @@
        " (5, 'Patches', 2, 'Calico', None)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cur.execute('''SELECT * FROM cats WHERE age BETWEEN 1 AND 3;''').fe"
+    "cur.execute('''SELECT * FROM cats WHERE age BETWEEN 1 AND 3;''').fetchall()"
    ]
   },
   {
