--- a/index.ipynb
+++ b/index.ipynb
@@ -401,25 +401,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
-       " (2, 'Hana', 1, 'Tabby', 1),\n",
-       " (5, 'Patches', 2, 'Calico', None)]"
+       "[('Maru',), ('Hana',), ('Patches',)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cur.execute('''SELECT * FROM cats WHERE age BETWEEN 1 AND 3;''').fetchall()"
+    "cur.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3;''').fetchall()"
    ]
   },
   {
