Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
    ],
    "source": [
     "# select cats where the name field is null here\n",
-    "SELECT * FROM cats WHERE Name IS null;"
+    "cur.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3;''').fetchall()"
    ]
   },
   {
