--- a/index.ipynb
+++ b/index.ipynb
@@ -500,21 +500,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-24-6bd4262428c9>, line 2)",
+     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-25-a528cc22e605>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-6bd4262428c9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;)\u001b[0m\n\u001b[0m                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-a528cc22e605>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;).fetchall()\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
      ]
     }
    ],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;)"
+    "cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;).fetchall()"
    ]
   },
   {
