--- a/index.ipynb
+++ b/index.ipynb
@@ -514,7 +514,7 @@
    ],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "SELECT COUNT([owner_id]) FROM cats WHERE owner_id = 1;).fetchall()"
+    "SELECT COUNT([owner_id]) FROM cats WHERE owner_id] = 1;).fetchall()"
    ]
   },
   {
