--- a/index.ipynb
+++ b/index.ipynb
@@ -500,21 +500,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-27-26de07958e15>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-28-a4e66a069475>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-26de07958e15>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    SELECT COUNT([owner_id]) FROM cats WHERE [owner_id] = 1\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-a4e66a069475>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    SELECT COUNT([owner_id]) FROM [cats] WHERE [owner_id] = 1\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "SELECT COUNT([owner_id]) FROM cats WHERE [owner_id] = 1"
+    "SELECT COUNT([owner_id]) FROM [cats] WHERE [owner_id] = 1"
    ]
   },
   {
