--- a/index.ipynb
+++ b/index.ipynb
@@ -500,21 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-0eb746373711>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-0eb746373711>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    SELECT COUNT owner_id FROM cats WHERE owner_id = 1;\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(2,)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;''')"
+    "cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;''').fetchall()"
    ]
   },
   {
