--- a/index.ipynb
+++ b/index.ipynb
@@ -568,7 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute above GROUP BY sql statement here"
+    "# execute above GROUP BY sql statement here\n",
+    "cur.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;''').fetchall()"
    ]
   },
   {
