Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,7 @@
    "outputs": [],
    "source": [
     "# execute above GROUP BY sql statement here\n",
-    "cur.execute('''SELECT breed FROM cats WHERE owner_id = 1;''').fetchall()"
+    "cur.execute('''SELECT breed FROM COUNT(breed) FROM cats owner_id = 1;''').fetchall()"
    ]
   },
   {
